[package]
name = "simplet"
version = "1.0.0"
description = "SimpleT - a lightweight LLM translation tray app"
authors = ["you"]
edition = "2021"

[lib]
name = "simplet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSButton", "NSScreen", "NSStatusItem", "NSView", "NSWindow"] }
objc2-foundation = "0.3.2"
